<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HajjRegistration"
    tools:showIn="@layout/activity_hajj_registration">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="@string/hajj_heading" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hajj_description"
        android:layout_marginTop="@dimen/hajj_fields_margin"
        android:id="@+id/textView7" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/h_person_name" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hajj_fields_margin"
        android:text="@string/h_person_cell" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/h_cell_hint"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hajj_fields_margin"
        android:text="@string/h_person_mail" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/h_mail_hint"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hajj_fields_margin"
        android:text="@string/h_depart_city" />

    <Spinner
        android:id="@+id/cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/h_city_opt"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hajj_fields_margin"
        android:text="@string/h_package" />

    <Spinner
        android:id="@+id/spin_package"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/h_pkg_opt"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="3"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hajj_fields_margin">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/h_adult"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/h_infant"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/h_child"
                android:textAlignment="center"/>

        </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="3"
                android:layout_height="wrap_content">
                <NumberPicker
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/adult" />
                <NumberPicker
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/Infant" />
                <NumberPicker
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/child" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/hajj_fields_margin"
                android:text="@string/h_msg" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:id="@+id/editText" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/h_submit_btn"/>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:foreground="@android:color/white"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="@android:color/white"
            android:text="@string/h_contact_lbl"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_brightness_2_white_24dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="@android:color/holo_orange_light"
                android:text="@string/h_contact_no"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
